# req-issue

./: .editorconfig  .gitignore  Main.hs  README.md  default.nix  foo.cabal  project.nix  shell.nix
nix/: sources.json
