cabal-version:       2.4

name:                foo
version:             0.1.0.0
license:             NONE
author:              Florian Beeres
maintainer:          yuuki@protonmail.com
extra-source-files:  CHANGELOG.md

executable foo
  main-is:             Main.hs
  build-depends:       
      base ^>=4.13.0.0
    , req
    , text
    , containers
  default-language:    Haskell2010
